# ShibaNet

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: index.js  lazyload.js
templates/: base.html  help.html  home-old.html  home.html  message.html  search.html  tmp_confirm.html
templates/auth/: forgot.html  login.html  register.html
templates/category/: view.html
templates/notif/: view.html
templates/post/: buttons.html  cmt_buttons.html  cmt_submit.html  submit.html  template.html  view.html
templates/user/: settings.html  view.html
utils/: authutils.py  email.py  flask.py  flaskutils.py  imgur.py  mongo.py  mongoutils.py  notifs.py  shortlinks.py  utils.py
