[tool.poetry]
name = "repl_python3_v2-bytutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = "^3.2.0"
Flask = "^2.0.2"
pymongo = {version = "^3.12.0", extras = ["srv"]}
Flask-PyMongo = "^2.3.0"
yagmail = "^0.14.260"
Flask-Misaka = "^1.0.0"

[tool.poetry.extras]
srv = ["pymongo"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
